Datatable alignment issue and Internet Explorer fix for menubar

--- a/software/nbia-web/webapp/css/styleSheet.css
+++ b/software/nbia-web/webapp/css/styleSheet.css
@@ -82,25 +82,55 @@ table.hdrBG {
   border-right: thin solid #798d93;
   border-left: thin solid #798d93;
 }
-table.portal-footer {margin-left: auto; margin-right: auto;}
+table.portal-footer {
+  margin-left: auto; 
+  margin-right: auto;
+}
 
-tr.portal-footer{text-align: center; font-size: 79%; }
+tr.portal-footer{
+  text-align: center; 
+  font-size: 79%; 
+}
 
-a.portal-footer {text-decoration: none; color: #333333; border: none; line-height: 1.1em;}
+a.portal-footer {
+  text-decoration: none; 
+  color: #333333; 
+  border: none; 
+  line-height: 1.1em;
+}
 
-a.portal-footer:visited {color: #333333;}
+a.portal-footer:visited {
+  color: #333333;
+}
 
-a.portal-footer:hover {text-decoration: underline;}
+a.portal-footer:hover {
+  text-decoration: underline;
+}
 
-#portal-footer { text-align: center; color: #333333; font-size: 79%; line-height: 3.2em;}
+#portal-footer { 
+  text-align: center; 
+  color: #333333; 
+  font-size: 79%; 
+  line-height: 3.2em;
+}
 
-#portal-footer a {text-decoration: none; color: #333333; border: none;}
+#portal-footer a {
+  text-decoration: none; 
+  color: #333333; 
+  border: none;
+}
 
-#portal-footer a:visited {color: #333333;}
+#portal-footer a:visited {
+  color: #333333;
+}
 
-#portal-footer a:hover {text-decoration: underline;}
+#portal-footer a:hover {
+  text-decoration: underline;
+}
 
-.footerLinks {padding: .5em 0em 0em 0em;}
+.footerLinks {
+  padding: .5em 0em 0em 0em;
+}
 
 td.mainMenu {
   border-top: #cccccc 1px solid; 
@@ -129,12 +159,10 @@ td.mainMenuItem {
 
 td.mainMenuItem ul{
   display: none;
-  list-style: none;
+  margin: 0;
   font-size: 1.0em;
-  padding-right: 2em; 
-  padding-left: 2em; 
-  padding-top: 5em; 
-  padding-bottom: 5em; 
+  text-align: left;
+  color: #ffffff; 
 }
 
 td.mainMenuItem:hover {
@@ -145,12 +173,33 @@ td.mainMenuItem:hover {
 td.mainMenuItem:hover ul  {
   display: block;
   position: absolute;
-  margin: 0;
-  padding: 0;
+  padding:0;
+  margin: auto;
+  margin-left: -1em;
+  
   background-color: #4C5D87;
 }
 
+td.mainMenuItem li {
+  color: #FFFFFF; 
+  white-space: nowrap; 
+  list-style: none;
+  Padding-top: 6px;
+  Padding-right: 7px;
+  Padding-bottom: 5px;
+  Padding-left:  5px;
+  border-bottom: 1px solid #EFEFEF;
+}
+
+td.mainMenuItem li a {
+  
+  color: #FFFFFF; 
+  text-decoration: none;
+	 
+}
+
 td.mainMenuItem li:hover {
+  color: #FFFFFF; 
   background-color: #d6d6d4;
 }
 
@@ -166,7 +215,8 @@ td.mainMenuItemOver {
 a.mainMenuLink:link {
   color: #ffffff; 
   white-space: nowrap; 
-  text-decoration: none
+  text-decoration: none;
+ 
 }
 
 a.mainMenuLink:visited {
@@ -262,10 +312,16 @@ td.subMenuFill {
   border-right: #cccccc 1px solid
 }
 
+/*
 a.subMenuPrimary {
   color: #FFFFFF; 
   white-space: nowrap; 
   text-decoration: underline;
+  Padding-top: 6px;
+  Padding-right: 7px;
+  Padding-bottom: 5px;
+  Padding-left:  5px;
+  border-bottom: 1px solid #EFEFEF;
 }
 
 
@@ -273,6 +329,7 @@ a.subMenuPrimary:link {
   color: #ffffff; 
   white-space: nowrap; 
   text-decoration: none
+  
 }
 
 a.subMenuPrimary:visited {
@@ -305,6 +362,7 @@ a.mainMenuLink:link {
   border-bottom: 1px solid #EFEFEF;
 }
 
+*/
 
 a.mainMenuLink:visited {
   color: #ffffff; 
@@ -454,6 +512,58 @@ input.actionButton {
   font-family: arial,helvetica,verdana,sans-serif
 }
 
+.columnClasses1{
+  width: 4%;
+		
+}
+
+.columnClasses2{
+  width: 14%;
+}
+
+.columnClasses3{  
+  width: 10%;
+}
+
+.columnClasses4{
+  width: 8%;
+	
+}
+
+.columnClasses5{
+  width: 17%;
+	
+}
+
+.columnClasses6{
+  width: 8%;
+	
+}
+
+.columnClasses7{
+  width: 13%;
+	
+}
+
+.columnClasses8{
+  width: 7%;
+	
+}
+
+.columnClasses9{
+  width: 6%;
+	
+}
+
+.columnClasses10{
+  width: 7%;
+	
+}
+
+.columnClasses11{
+  width: 6%;
+	
+}
 
 .seriesDataCell {
   padding-left: 3px;
